fix: deleting wrong rules because of sorting

--- a/dockergen/dockergen.conf
+++ b/dockergen/dockergen.conf
@@ -1,5 +1,6 @@
 [[config]]
 watch = true
-notifycmd = "/bin/bash /tmp/update-iptables.sh"
+notifyCmd = "/bin/bash /tmp/update-iptables.sh"
+notifyOutput = true
 template = "/dockergen/update-iptables.tmpl"
 dest = "/tmp/update-iptables.sh"
